# Energy-Physics-Pipeline

./: .gitignore  .zenodo.json  BOUNDARY.md  CHANGELOG.md  CITATION.cff  CLEAN-RENAME-PRD.md  CLEAN-RENAME-STARTUP-PROMPT.md  CONTRIBUTING.md  CPU-HARDENING-BRIEF.md  EXECUTION-STATE.md  FINAL-REPORT.md  FRONT-DOOR-RECEIPT-2026-05-02.md  H100-ENTERPRISE-COMPLETION-PLAN.md  HANDOFF-FROM-OVERNIGHT-EXECUTOR.md  HANDOFF-TO-ORCHESTRATOR.md  HANDOFF-TO-OVERNIGHT-EXECUTOR.md  LICENSE  MODUS-OPERANDI.md  Makefile  NEXT-WAVE-PLAN.md  ORCHESTRATOR-STARTUP-PROMPT.md  OVERNIGHT-EXECUTOR-STARTUP-PROMPT.md  PRD.md  README.md  RENAME-RECEIPT-2026-05-03.md  RUNBOOK.md  RUNPOD-READINESS.md  SECURITY.md  WAVE4-CPU-HARDENING-BRIEF.md  WAVE4-OPUS-STARTUP-PROMPT.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CURRENT_PUBLIC_STATUS.md  HF_LANE_STATE.md  architecture.md
docs/decisions/: 000-overview.md  001-license-policy.md  002-mcp-as-product-surface.md  003-falsification-wave.md  004-data-sovereignty.md  005-deviations-from-prd.md  006-pybop-integration.md  007-omas-integration.md  008-pyrokinetics-integration.md  009-quantum-slot-vqe.md  010-source-verification-wave.md  011-cpu-package-failures.md  012-tandem-pv-and-r2s-analytic.md
energy_physics_pipeline/: __init__.py  boundary.py
energy_physics_pipeline/audit/: __init__.py  writer.py
energy_physics_pipeline/cli/: main.py
energy_physics_pipeline/kg/: __init__.py  graph.py
energy_physics_pipeline/l6/: __init__.py  backend_resolver.py  enforcement.py  production_falsifiers.py  registry.py  router.py
energy_physics_pipeline/mcp_servers/: __init__.py  _common.py  aiida_mcp.py  cantera_mcp.py  imas_codex_mcp.py  openmc_mcp.py  pvlib_mcp.py  pybamm_mcp.py  pypsa_mcp.py  pysam_mcp.py  registry.py  solcore_mcp.py
energy_physics_pipeline/rest/: __init__.py  app.py
energy_physics_pipeline/schemas/: __init__.py  canonical.py  dro.py  envelope.py  reasoner.py  source.py
energy_physics_pipeline/tda/: __init__.py  cross_domain.py  early_warning.py  no_leakage.py
energy_pipeline/: __init__.py  boundary.py
energy_pipeline/audit/: __init__.py  writer.py
energy_pipeline/cli/: main.py
energy_pipeline/kg/: __init__.py  graph.py
energy_pipeline/l6/: __init__.py  backend_resolver.py  config.py  enforcement.py  production_falsifiers.py  registry.py  router.py
energy_pipeline/mcp_servers/: __init__.py  _common.py  aiida_mcp.py  cantera_mcp.py  imas_codex_mcp.py  openmc_mcp.py  pvlib_mcp.py  pybamm_mcp.py  pypsa_mcp.py  pysam_mcp.py  registry.py  solcore_mcp.py
energy_pipeline/rest/: __init__.py  app.py
energy_pipeline/schemas/: __init__.py  dro.py  envelope.py  falsification.py  source.py
energy_pipeline/tda/: __init__.py  cross_domain.py  early_warning.py
fixtures/electrochem/: battery_chen2020.json  pem_butler_volmer.json  pv_sandton.json  sa_scenario.json  sofc_simple.json  thermoelectric_skutterudite.json
fixtures/fusion/: imas_demo.nc  pyrokinetics_demo.gs2
fixtures/negative/: negative_above_carnot.json  negative_battery_soc.json  negative_boundary_mutation.json  negative_coordinate_convention.json  negative_cross_model_disagreement.json  negative_density.json  negative_imas_version.json  negative_license_promotion.json  negative_pv_fill_factor.json  negative_stub_scientific_valid.json  negative_temperature.json  negative_unit_omission.json
scripts/: clean_runtime.sh  full_check.sh  quick_demo.py
source-briefs/: 00-research-agent-handover-note.md  01-electrochemical-m2s-pipeline.md  02-fusion-sa-llm-data-standards.md
sources_log/: license_findings.jsonl  seed.jsonl  seed_verified.jsonl  verification_summary.md
synthesis/: 01-fresh-eyes-on-energy-briefs.md
tests/contract/: test_audit_kg.py  test_canonical_json.py  test_dro.py  test_electrochem_dro.py  test_envelope.py  test_falsification_schemas.py  test_fusion_dro.py  test_l6.py  test_plug_replaceability.py  test_rest_stubs.py  test_source_and_reasoner.py  test_source_manifest_shape.py
tests/falsification/: __init__.py  test_audit_kg_mandatory.py  test_boundary_mutation.py  test_class_b_promotion.py  test_cross_model_disagreement.py  test_falsification_wave.py  test_forbidden_intent_paraphrase.py  test_license_promotion.py  test_tda_no_leakage.py  test_units_omission.py
tests/integration/: test_audit_kg_parallel_safety.py  test_cross_model_disagreement_live.py  test_data_pointers.py  test_electrochem_e2e.py  test_fusion_phase0.py  test_fusion_reasoning_bench.py  test_mandatory_audit_kg_counts.py  test_mcp_real_adapter_dispatch.py  test_mcp_smoke.py  test_mcp_stdio.py  test_omas_validation.py  test_parsers_and_manifests.py  test_plug_replaceability_live.py  test_pybop_inference.py  test_pyrokinetics_parser.py  test_r2s_analytic.py  test_runpod_dispatch.py  test_runpod_same_endpoint.py  test_sa_scenario.py  test_sources_and_reasoner.py  test_tandem_pv.py  (+2 more)
tools/: build_summary.py  runpod_cutover_checklist.py  show_audit.py  show_kg.py  verify_sources.py
(+104 files in other folders)
