[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy_pipeline"
version = "0.1.0"
description = "Zer0pa Energy — CPU-first in silico research infrastructure for electrochemistry and fusion / plasma physics."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary — Zer0pa internal research artifact"}
authors = [{name = "Zer0pa Architect Prime"}]
keywords = ["electrochemistry", "fusion", "plasma", "pybamm", "openmc", "imas", "pypsa", "pvlib", "research"]

dependencies = [
  "pydantic>=2.6,<3",
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "duckdb>=0.10",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "orjson>=3.10",
  "networkx>=3.2",
]

[project.optional-dependencies]
electrochem = [
  "pybamm>=23.5",
  "pybop>=24.0",
  "pvlib>=0.10",
  "pypsa>=0.30",
  "cantera>=3.0",
  "pyscf>=2.5",
]
fusion = [
  "freegs>=0.7",
  "openmc-data-utils",
  "imas-python",
  "h5py>=3.10",
  "netcdf4>=1.6",
]
tda = [
  "ripser>=0.6",
  "persim>=0.3",
]
test = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.100",
  "ruff>=0.4",
]
mcp = [
  "mcp>=0.9",
]

[project.scripts]
energy = "energy_pipeline.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["energy_pipeline*"]
exclude = ["tests*", "fixtures*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "contract: schema/contract tests",
  "falsification: negative / falsifier tests",
  "integration: end-to-end paths",
  "scientific: physics-bounds tests",
]
