[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-physics-pipeline"
version = "0.1.0"
description = "Energy Physics Pipeline - CPU-first in silico research infrastructure for electrochemistry and fusion / plasma physics."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Zer0pa-SAL-7.1"
license-files = ["LICENSE"]
authors = [{name = "Zer0pa Architect Prime"}]
keywords = ["electrochemistry", "fusion", "plasma", "pybamm", "openmc", "imas", "pypsa", "pvlib", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "pydantic>=2.6,<3",
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "duckdb>=0.10",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "orjson>=3.10",
  "networkx>=3.2",
]

[project.optional-dependencies]
electrochem = [
  "pybamm>=23.5",
  "pybop>=24.0",
  "pvlib>=0.10",
  "pypsa>=0.30",
  "cantera>=3.0",
  "pyscf>=2.5",
]
fusion = [
  "freegs>=0.7",
  "openmc-data-utils",
  "imas-python",
  "h5py>=3.10",
  "netcdf4>=1.6",
  "pyrokinetics>=0.8",
  "omas>=0.95",
]
tda = [
  "ripser>=0.6",
  "persim>=0.3",
]
test = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-asyncio>=0.23",
  "hypothesis>=6.100",
  "ruff>=0.4",
]
mcp = [
  "mcp>=0.9",
]
quantum = [
  "qiskit>=2.0",
]
advanced-cpu = [
  "pybop>=24.0",
  "pyrokinetics>=0.8",
  "omas>=0.95",
  "qiskit>=2.0",
]
# torch-dependent extras — likely fail on Python 3.13 darwin pre-Runpod-Linux.
# Listed for documentation; install best-effort with `--no-deps` if needed.
runpod-only = [
  "mace-torch>=0.3",
  "fairchem-core>=1.0",
  "botorch>=0.10",
  "ax-platform>=0.4",
]

[project.scripts]
energy-physics = "energy_physics_pipeline.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["energy_physics_pipeline*"]
exclude = ["tests*", "fixtures*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "contract: schema/contract tests",
  "falsification: negative / falsifier tests",
  "integration: end-to-end paths",
  "scientific: physics-bounds tests",
]

[tool.coverage.run]
branch = true
source = ["energy_physics_pipeline"]
omit = [
  "energy_physics_pipeline/mcp_servers/__main__*",
  "*/__init__.py",
]

[tool.coverage.report]
# Soft 80% gate (warn-only; not enforced by `pytest --cov-fail-under` here so CI stays
# green during the post-Runpod expansion. Flip to `fail_under = 80` once active-learning
# and Runpod-side adapters land.)
precision = 1
show_missing = true
skip_empty = true
exclude_also = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == \"__main__\":",
]